logs/validation_2026-01-23_14-05-35.txt
═══════════════════════════════════════════════════════════════
Step 1: All Unit & Integration Tests
═══════════════════════════════════════════════════════════════
warning: field `deallocations` is never read
  --> tests/bytemuck_allocation_tests.rs:99:5
   |
97 | struct AllocationMetrics {
   |        ----------------- field in this struct
98 |     allocations: usize,
99 |     deallocations: usize,
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `kameo_remote` (test "bytemuck_allocation_tests") generated 1 warning
warning: unused variable: `type_hash`
  --> examples/console_tell_ask_server.rs:66:9
   |
66 |         type_hash: u32,
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_type_hash`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `kameo_remote` (example "console_tell_ask_server") generated 1 warning
   Compiling kameo_remote v0.1.0 (/Users/greg/Dev/git/kameo_remote)
warning: unused import: `kameo_remote::*`
 --> tests/body_allocation_baseline.rs:8:5
  |
8 | use kameo_remote::*;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: field `deallocations` is never read
  --> tests/body_allocation_baseline.rs:47:5
   |
45 | struct AllocationMetrics {
   |        ----------------- field in this struct
46 |     allocations: usize,
47 |     deallocations: usize,
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `RegistryMessageArchivedAccess`
 --> examples/test_guard_demo.rs:8:52
  |
8 | use kameo_remote::registry::{RegistryMessageFrame, RegistryMessageArchivedAccess};
  |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `archived`
  --> examples/test_guard_demo.rs:28:9
   |
28 |     let archived = frame.archived().unwrap();
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_archived`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `kameo_remote` (test "body_allocation_baseline") generated 2 warnings (run `cargo fix --test "body_allocation_baseline"` to apply 1 suggestion)
warning: `kameo_remote` (example "test_guard_demo") generated 2 warnings (run `cargo fix --example "test_guard_demo"` to apply 1 suggestion)
error[E0599]: no method named `unwrap` found for struct `RegistryMessageFrame` in the current scope
 --> examples/production_guard_test.rs:8:35
  |
8 |     let _owned = frame.to_owned().unwrap();
  |                                   ^^^^^^ method not found in `RegistryMessageFrame`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `kameo_remote` (example "production_guard_test") due to 1 previous error
❌ Some tests failed - validation failed
